Suchen-Funktionalität und Teil der Filter-Funktionalität

--- a/bewerbungverwaltung-cloud-web/src/main/webapp/i18n/i18n.properties
+++ b/bewerbungverwaltung-cloud-web/src/main/webapp/i18n/i18n.properties
@@ -1,1 +1,5 @@
+## BewerbungenMaster ##
 Tage=Tage
+masterTitleCount=Bewerbungen ({0})
+masterListNoDataText=Keine Bewerbungen
+masterFilterBarText=Gefiltert nach {0}
