Filtern nach Stellen und neue Bilder

--- a/bewerbungverwaltung-cloud-web/src/main/webapp/i18n/i18n.properties
+++ b/bewerbungverwaltung-cloud-web/src/main/webapp/i18n/i18n.properties
@@ -3,3 +3,5 @@ Tage=Tage
 masterTitleCount=Bewerbungen ({0})
 masterListNoDataText=Keine Bewerbungen
 masterFilterBarText=Gefiltert nach {0}
+masterListNoDataWithFilterOrSearchText=Keine passende Bewerbung gefunden
+masterListNoDataText=Keine Bewerbungen verfügbar
