--- a/bewerbungverwaltung-cloud-web/src/main/webapp/i18n/i18n.properties
+++ b/bewerbungverwaltung-cloud-web/src/main/webapp/i18n/i18n.properties
@@ -5,3 +5,8 @@ masterListNoDataText=Keine Bewerbungen
 masterFilterBarText=Gefiltert nach {0}
 masterListNoDataWithFilterOrSearchText=Keine passende Bewerbung gefunden
 masterListNoDataText=Keine Bewerbungen verfügbar
+masterSort1=Vorname
+masterSort2=Nachname
+masterSort3=Datum
+masterGroup1=Status
+masterGroupNone=Keine Gruppierung
