NotFound-Views angelegt (funktioniert noch nicht)

--- a/bewerbungverwaltung-cloud-web/src/main/webapp/i18n/i18n.properties
+++ b/bewerbungverwaltung-cloud-web/src/main/webapp/i18n/i18n.properties
@@ -1,4 +1,4 @@
-## BewerbungenMaster ##
+#~~~ Bewerbungen Master View ~~~~~~~~~~~~~~~~
 Tage=Tage
 masterTitleCount=Bewerbungen ({0})
 masterListNoDataText=Keine Bewerbungen
@@ -10,3 +10,25 @@ masterSort2=Nachname
 masterSort3=Datum
 masterGroup1=Status
 masterGroupNone=Keine Gruppierung
+
+#~~~ Bewerbung Detail View ~~~~~~~~~~~~~~~~
+#XTIT: Detail view title
+detailTitle=Bewerbung
+
+#~~~ Not Found View ~~~~~~~~~~~~~~~~~~~~~~~
+#XTIT: Not found view title
+notFoundTitle=Nicht gefunden
+
+#YMSG: Is displayed when there is no job application with this ID
+noObjectFoundText=Diese Bewerbung wurde nicht gefunden
+
+#YMSG: Is displayed when there was an error loading the resource (404 error)
+notFoundText=Fehler beim Anfordern der Bewerbungen
+
+#~~~ Not Available View ~~~~~~~~~~~~~~~~~~~
+
+#XTIT: DetailNoObjectsAvailable view title
+notAvailableViewTitle=Bewerbung
+
+#YMSG: Is displayed when there is no data when starting the app
+noObjectsAvailableText=Keine Bewerbungen verfügbar
