Bisschen aufräumen und Sorting und Grouping in den ViewSettingsDialog aufgenommen

--- a/bewerbungverwaltung-cloud-web/src/main/webapp/i18n/i18n.properties
+++ b/bewerbungverwaltung-cloud-web/src/main/webapp/i18n/i18n.properties
@@ -1,15 +1,14 @@
-#~~~ Bewerbungen Master View ~~~~~~~~~~~~~~~~
+#~~~ Bewerbungen Master View ~~~~~~~~~~~~~~
 Tage=Tage
 TitleWithCount=Bewerbungen ({0})
-masterListNoDataText=Keine Bewerbungen
-masterFilterBarText=Gefiltert nach {0}
-masterListNoDataWithFilterOrSearchText=Keine passende Bewerbung gefunden
-masterListNoDataText=Keine Bewerbungen verfügbar
-masterSort1=Vorname
-masterSort2=Nachname
-masterSort3=Datum
-masterGroup1=Status
-masterGroupNone=Keine Gruppierung
+FilterBarText=Gefiltert nach {0}
+ListNoDataWithFilterOrSearchText=Keine passende Bewerbung gefunden
+ListNoDataText=Keine Bewerbungen verfügbar
+Sort1=Vorname
+Sort2=Nachname
+Sort3=Datum
+Group1=Status
+GroupNone=Keine Gruppierung
 
 #~~~ Bewerbung Detail View ~~~~~~~~~~~~~~~~
 #XTIT: Detail view title
