--- a/bewerbungverwaltung-cloud-web/src/main/webapp/i18n/i18n.properties
+++ b/bewerbungverwaltung-cloud-web/src/main/webapp/i18n/i18n.properties
@@ -4,11 +4,6 @@ TitleWithCount=Bewerbungen ({0})
 FilterBarText=Gefiltert nach {0}
 ListNoDataWithFilterOrSearchText=Keine passende Bewerbung gefunden
 ListNoDataText=Keine Bewerbungen verfügbar
-Sort1=Vorname
-Sort2=Nachname
-Sort3=Datum
-Group1=Status
-GroupNone=Keine Gruppierung
 
 #~~~ Bewerbung Detail View ~~~~~~~~~~~~~~~~
 #XTIT: Detail view title
@@ -18,11 +13,11 @@ detailTitle=Bewerbung
 #XTIT: Not found view title
 notFoundTitle=Nicht gefunden
 
+#YMSG: Is displayed when there was an error loading the resource (404 error)
+notFoundText=Diese Seite konnte nicht gefunden werden
+
 #YMSG: Is displayed when there is no job application with this ID
 noObjectFoundText=Diese Bewerbung wurde nicht gefunden
-
-#YMSG: Is displayed when there was an error loading the resource (404 error)
-notFoundText=Fehler beim Anfordern der Bewerbungen
 
 #~~~ Not Available View ~~~~~~~~~~~~~~~~~~~
 
