--- a/bewerbungverwaltung-cloud-web/src/main/webapp/i18n/i18n.properties
+++ b/bewerbungverwaltung-cloud-web/src/main/webapp/i18n/i18n.properties
@@ -7,7 +7,7 @@ ListNoDataText=Keine Bewerbungen verfügbar
 
 #~~~ Bewerbung Detail View ~~~~~~~~~~~~~~~~
 #XTIT: Detail view title
-detailTitle=Bewerbung
+Title=Bewerbung
 
 #~~~ Not Found View ~~~~~~~~~~~~~~~~~~~~~~~
 #XTIT: Not found view title
