"Implemented" i18n and general cleaning

--- a/bewerbungverwaltung-cloud-web/src/main/webapp/i18n/i18n.properties
+++ b/bewerbungverwaltung-cloud-web/src/main/webapp/i18n/i18n.properties
@@ -1,28 +1,66 @@
 #~~~ Bewerbungen Master View ~~~~~~~~~~~~~~
-Tage=Tage
-TitleWithCount=Bewerbungen ({0})
-FilterBarText=Gefiltert nach {0}
-ListNoDataWithFilterOrSearchText=Keine passende Bewerbung gefunden
-ListNoDataText=Keine Bewerbungen verfügbar
+MasterTitleWithCount=Bewerbungen ({0})
+MasterFilterBarText=Gefiltert nach {0}
+MasterListNoDataWithFilterOrSearchText=Keine passende Bewerbung gefunden
+MasterListNoDataText=Keine Bewerbungen verfügbar
+MasterTableStellenNoDataText=Initiativbewerbung
+MasterSearchFieldPlaceholder=Suchen
+
+	#~~~ BewerbungListItem Fragment ~~~~~~~~~~~
+ItemTableStellenNoDataText=Initiativbewerbung
+ItemNumberOfDays={0} Tage
+
+	#~~~ ViewSettingsDialog ~~~~~~~~~~~~~~~~~~~
+ViewSettingsDate=Datum
+ViewSettingsForename=Vorname
+ViewSettingsSurname=Nachname
+ViewSettingsStatus=Status
+ViewSettingsPosition=Stelle
 
 #~~~ Bewerbung Detail View ~~~~~~~~~~~~~~~~
-#XTIT: Detail view title
-Title=Bewerbung
+DetailTitle=Bewerbung
+DetailEnteredBy=Eingetragen von
+DetailEnteredOn=Eingetragen am
+DetailSectionTitleDetails=Details
+DetailSectionTitleComments=Kommentare
+DetailSectionTitleDocuments=Unterlagen
+DetailSectionTitleCirculation=Umlauf
+
+	#~~~ Bewerbung Details Fragment ~~~~~~~~~~~
+DetailsPersonalData=Persönliche Daten
+DetailsSurname=Nachname
+DetailsForename=Vorname
+DetailsStreet=Straße
+DetailsZipCity=PLZ / Ort
+DetailsAppliedFor=Beworben als
+DetailsContactDetails=Kontaktdaten
+DetailsEmail=Email
+DetailsPhone=Telefon
+DetailsMobile=Mobil
+DetailsSources=Quellen
+
+	#~~~ Bewerbung Kommentare Fragment ~~~~~~~~
+KommentareName=Name
+KommentareDate=Datum
+
+	#~~~ Bewerbung Umlauf Fragment ~~~~~~~~~~~~
+UmlaufDepartments=Abteilungen
+UmlaufDepartment=Abteilung
+UmlaufSent=Gesendet
+UmlaufRead=Gelesen
+UmlaufStatus=Status
+	
+	#~~~ Bewerbung Unterlagen Fragment ~~~~~~~~
+UnterlagenDocuments=Unterlagen
 
 #~~~ Not Found View ~~~~~~~~~~~~~~~~~~~~~~~
-#XTIT: Not found view title
-notFoundTitle=Nicht gefunden
+NotFoundTitle=Nicht gefunden
+NotFoundText=Diese Seite konnte nicht gefunden werden
 
-#YMSG: Is displayed when there was an error loading the resource (404 error)
-notFoundText=Diese Seite konnte nicht gefunden werden
+#~~~ Object Not Found View ~~~~~~~~~~~~~~~~
+ObjectNotFoundText=Nicht gefunden
+ObjectNotFoundText=Diese Bewerbung wurde nicht gefunden
 
-#YMSG: Is displayed when there is no job application with this ID
-noObjectFoundText=Diese Bewerbung wurde nicht gefunden
-
-#~~~ Not Available View ~~~~~~~~~~~~~~~~~~~
-
-#XTIT: DetailNoObjectsAvailable view title
-notAvailableViewTitle=Bewerbung
-
-#YMSG: Is displayed when there is no data when starting the app
-noObjectsAvailableText=Keine Bewerbungen verfügbar
+#~~~ No Objects Available View ~~~~~~~~~~~~
+NoObjectsAvailableTitle=Bewerbung
+NoObjectsAvailableText=Keine Bewerbungen verfügbar
