NoDataText for some simple lists in Detail Vie (via ExpressionBinding). Added some more i18n stuff.

--- a/bewerbungverwaltung-cloud-web/src/main/webapp/i18n/i18n.properties
+++ b/bewerbungverwaltung-cloud-web/src/main/webapp/i18n/i18n.properties
@@ -25,6 +25,10 @@ DetailSectionTitleDetails=Details
 DetailSectionTitleComments=Kommentare
 DetailSectionTitleDocuments=Unterlagen
 DetailSectionTitleCirculation=Umlauf
+DetailStellenNoDataText=Initiativbewerbung
+DetailEditButton=Bearbeiten
+DetailSaveButton=Speichern
+DetailCancelButton=Abbrechen
 
 	#~~~ Bewerbung Details Fragment ~~~~~~~~~~~
 DetailsPersonalData=Persönliche Daten
@@ -38,6 +42,8 @@ DetailsEmail=Email
 DetailsPhone=Telefon
 DetailsMobile=Mobil
 DetailsSources=Quellen
+DetailsStellenNoDataText=Keine Quellen
+DetailsQuellenNoDataText=Keine Quellen
 
 	#~~~ Bewerbung Kommentare Fragment ~~~~~~~~
 KommentareName=Name
@@ -52,6 +58,7 @@ UmlaufStatus=Status
 	
 	#~~~ Bewerbung Unterlagen Fragment ~~~~~~~~
 UnterlagenDocuments=Unterlagen
+UnterlagenNoDataText=Keine Unterlagen
 
 #~~~ Not Found View ~~~~~~~~~~~~~~~~~~~~~~~
 NotFoundTitle=Nicht gefunden
