Added more i18n entries

--- a/bewerbungverwaltung-cloud-web/src/main/webapp/i18n/i18n.properties
+++ b/bewerbungverwaltung-cloud-web/src/main/webapp/i18n/i18n.properties
@@ -44,6 +44,10 @@ DetailsMobile=Mobil
 DetailsSources=Quellen
 DetailsStellenNoDataText=Keine Quellen
 DetailsQuellenNoDataText=Keine Quellen
+		#~~~ DetailsBearbeiten Fragment ~~~~~~~
+DetailsBearbeitenNoDataTextStellen=Initiativbewerbung
+DetailsBearbeitenStellenTitle=Stellen
+DetailsBearbeitenFirstColumnStellen=Bezeichnung
 
 	#~~~ Bewerbung Kommentare Fragment ~~~~~~~~
 KommentareName=Name
