Switching to mock server

--- a/bewerbungverwaltung-cloud-web/src/main/webapp/i18n/i18n.properties
+++ b/bewerbungverwaltung-cloud-web/src/main/webapp/i18n/i18n.properties
@@ -52,6 +52,7 @@ DetailsBearbeitenFirstColumnStellen=Bezeichnung
 	#~~~ Bewerbung Kommentare Fragment ~~~~~~~~
 KommentareName=Name
 KommentareDate=Datum
+KommentareBearbeitenTitle=Kommentar schreiben
 
 	#~~~ Bewerbung Umlauf Fragment ~~~~~~~~~~~~
 UmlaufDepartments=Abteilungen
@@ -59,7 +60,8 @@ UmlaufDepartment=Abteilung
 UmlaufSent=Gesendet
 UmlaufRead=Gelesen
 UmlaufStatus=Status
-	
+UmlaufBearbeitenTitle=Umlauf bearbeiten
+
 	#~~~ Bewerbung Unterlagen Fragment ~~~~~~~~
 UnterlagenDocuments=Unterlagen
 UnterlagenNoDataText=Keine Unterlagen
