Changed KommentareBearbeiten fragment

--- a/bewerbungverwaltung-cloud-web/src/main/webapp/i18n/i18n.properties
+++ b/bewerbungverwaltung-cloud-web/src/main/webapp/i18n/i18n.properties
@@ -27,6 +27,7 @@ DetailSectionTitleDocuments=Unterlagen
 DetailSectionTitleCirculation=Umlauf
 DetailStellenNoDataText=Initiativbewerbung
 DetailEditButton=Bearbeiten
+DetailAddKommentarButton=Neuer Kommentar
 DetailSaveButton=Speichern
 DetailCancelButton=Abbrechen
 
