--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -2,7 +2,7 @@
 MasterTitleWithCount=Bewerbungen ({0})
 MasterFilterBarText=Gefiltert nach {0}
 MasterListNoDataWithFilterOrSearchText=Keine passende Bewerbung gefunden
-MasterListNoDataText=Keine Bewerbungen verf&uuml;gbar
+MasterListNoDataText=Keine Bewerbungen verfügbar
 MasterTableStellenNoDataText=Initiativbewerbung
 MasterSearchFieldPlaceholder=Suchen
 
@@ -32,7 +32,7 @@ DetailSaveButton=Speichern
 DetailCancelButton=Abbrechen
 
 	#~~~ Bewerbung Details Fragment ~~~~~~~~~~~
-DetailsPersonalData=Pers&ouml;nliche Daten
+DetailsPersonalData=Persönliche Daten
 DetailsSurname=Nachname
 DetailsForename=Vorname
 DetailsStreet=Straße
@@ -77,4 +77,4 @@ ObjectNotFoundText=Diese Bewerbung wurde nicht gefunden
 
 #~~~ No Objects Available View ~~~~~~~~~~~~
 NoObjectsAvailableTitle=Bewerbung
-NoObjectsAvailableText=Keine Bewerbungen verf&uuml;gbar
+NoObjectsAvailableText=Keine Bewerbungen verfügbar
