Now loads the Applicants Picture from the DocumentService

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -43,7 +43,7 @@ DetailsEmail=Email
 DetailsPhone=Telefon
 DetailsMobile=Mobil
 DetailsSources=Quellen
-DetailsStellenNoDataText=Keine Quellen
+DetailsStellenNoDataText=Keine Stellen
 DetailsQuellenNoDataText=Keine Quellen
 		#~~~ DetailsBearbeiten Fragment ~~~~~~~
 DetailsBearbeitenNoDataTextStellen=Initiativbewerbung
